feat: update dependencies and enhance .gitignore for improved project structure

--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@aws-sdk/client-s3": "^3.864.0",
     "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@prisma/client": "^6.13.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/helmet": "^0.0.48",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.11.0",
     "bullmq": "^5.57.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.7.0",
+    "jsonwebtoken": "^9.0.2",
     "pino": "^9.8.0",
     "pino-http": "^10.5.0",
     "prisma": "^6.13.0",
