--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@prisma/client": "^6.13.0",
     "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/helmet": "^0.0.48",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.11.0",
     "bullmq": "^5.57.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
